# fastapi_celery

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
0. basics/alembic/versions/: 74a8ed155c30_.py  d71ada93c3f9_.py
0. basics/project/users/: models.py
1. dockerizing/: docker-compose.yml  main.py  pyproject.toml
1. dockerizing/compose/local/fastapi/: Dockerfile
2. auto reload/: pyproject.toml
2. auto reload/.env/: .dev-sample
2. auto reload/compose/local/fastapi/: Dockerfile
2. auto reload/compose/local/fastapi/celery/worker/: start
2. auto reload/project/: celery_utils.py
2. auto reload/project/users/: tasks.py
alembic/: env.py
project/: __init__.py  config.py  database.py
